tests/sksl/errors/StaticIfTest.glsl
### Compilation failed:

error: 4: static if has non-static test
    @if (unknownInput < 10) {
         ^^^^^^^^^^^^^^^^^
1 error
